# battle-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  recipe.md  samconfig.toml  template.yaml
.github/workflows/: pipeline.yaml  terraform.yml
battle_python/: BattlesnakeTypes.py  api.py  app.py  dev-requirements.txt  requirements.txt
images/: aws-ubuntu.pkr.hcl  fastapi.service  fastapi_nginx.conf
images/files/: battlesnakes.conf  cw_agent_config.json  fastapi.service  fastapi_nginx.conf  gunicorn.service  nginx.conf
images/scripts/: install_dependencies.sh
infrastructure/: 00_provider.tf  01_vpc.tf  02_ami.tf  02_server.tf  03_dynamodb.tf  03_server.tf  03_server_role.tf  04_server.tf  04_server_role.tf
infrastructure/scripts/: user_data.sh
scripts/: cloudformation_outputs.py  get_cloudformation_outputs.py  image_setup.sh
src/: requirements.txt  spam.py
src/battle_python/: Battlesnake.py  BattlesnakeTypes.py  Board.py  BoardState.py  EnrichedBoard.py  EnrichedGameState.py  GameState.py  SnakeState.py  api.py  api_types.py  constants.py  dynamodb.py  game_state.py  logging_config.py  main.py  pathfinder.py  something_else.py  types.py  utils.py
src/battle_python/visualizer/: Actions.py  Game.py
src/battle_python/visualizer/states/: State.py  Title.py
terraform/: .terraform.lock.hcl  01_vpc.tf  userdata.tpl
tests/: conftest.py  dev-requirements.txt  requirements.txt
tests/assets/: move.json
tests/fixtures/: timer.py
tests/integration/: test_api.py
tests/mocks/: MockBattlesnakeTypes.py  MockLambdaContext.py  api_gateway_event.py  get_mock_board_state.py  get_mock_enriched_board.py  get_mock_enriched_gamestate.py  get_mock_game_state.py  get_mock_snake_state.py  mock_api_types.py  mock_game_state.py
tests/profiling/: get_next_move.py
tests/unit/: test_Battlesnake.py  test_EnrichedGameState.py  test_GameState.py  test_api.py  test_api_types.py  test_battlesnake_types.py  test_board_state.py  test_enriched_board.py  test_game_state.py  test_handler.py  test_pathfinder.py  test_snake_state.py  test_spam.py  test_types.py  test_utils.py
