[tool.poetry]
name = "battle-python"
version = "0.1.0"
description = "A Serverless Battlesnakes API"
authors = ["zanebclark <zanebclark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pre-commit = "^3.6.0"
poetry-plugin-export = "^1.6.0"
aws-lambda-powertools = "^2.30.2"


[tool.poetry.group.dev.dependencies]
jmespath = "^1.0.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
