[tool.poetry]
name = "battle-python"
version = "0.1.0"
description = "A Serverless Battlesnakes API"
authors = ["zanebclark <zanebclark@gmail.com>"]
readme = "README.md"
packages = [{include = "battle_python", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = {extras = ["tracer", "validation"], version = "^2.30.2"}
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
aws_xray_sdk = "*"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.30.2"}
black = {extras = ["d"], version = "^23.12.1"}
click = "^8.1.7"
jmespath = "^1.0.1"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
