[tool.poetry]
name = "battle-python"
version = "0.1.0"
description = "A Serverless Battlesnakes API"
authors = ["zanebclark <zanebclark@gmail.com>"]
readme = "README.md"
packages = [{include = "battle_python", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
numpy = "^1.26.4"
structlog = "^24.1.0"
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"
logger-cloudwatch-structlog = "^0.1.1"
ec2-metadata = "^2.13.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.12.1"}
click = "^8.1.7"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
coverage = "^7.4.1"
python-dotenv = "^1.0.1"
boto3 = "^1.34.54"
httpx = "^0.27.0"
mypy = "^1.9.0"
boto3-stubs = "^1.34.61"
types-requests = "^2.31.0.20240311"
mypy-boto3-dynamodb = "^1.34.57"

[tool.mypy]
mypy_path="./src:./tests"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = 'battle_python'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
